--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "jest": "^30.1.3"
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
